Check for memory leaks.
git-svn-id: http://zyao.unfuddle.com/svn/zyao_iphoneapps/trunk@95 8c287f6f-53b1-4db0-8e59-0c5774308c12

--- a/iPhoneTransit/maplet.html
+++ b/iPhoneTransit/maplet.html
@@ -11,6 +11,7 @@
     //<![CDATA[
   
 	var map;
+	var marker;
     function load() {     
 
 		var searchString = document.location.search;
@@ -38,7 +39,8 @@
 			if( (lat!= "0") && (long!= "0") ){
 				var point = new GLatLng(lat, long);
 				map.setCenter(point, 17);
-				map.addOverlay(new GMarker(point));
+				marker = new GMarker(point);
+				map.addOverlay(marker);
 			}
 			else
 				document.write("Parameter error! Unknow coordinate!");
