Change background of AboutView and InfoView.
git-svn-id: http://zyao.unfuddle.com/svn/zyao_iphoneapps/trunk@296 8c287f6f-53b1-4db0-8e59-0c5774308c12

--- a/iBus-Universal/about.html
+++ b/iBus-Universal/about.html
@@ -1,6 +1,7 @@
 <html> 
-<body>
-Author: Zhenwang Yao <br><br>
+<body TOPMARGIN=20px LEFTMARGIN=20px RIGHTMARGIN=20px>
+
+Developer: Zhenwang Yao <br><br>
 
 This is an application based on 
 <a href="http://code.google.com/transit/spec/transit_feed_specification.html">Google Transit Feed Specification (GTFS)</a> data. 
